--- a/crates/fanttheysia-webapp-frontend/index.html
+++ b/crates/fanttheysia-webapp-frontend/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <title>Fanttheysia Re-localization Dashboard</title>
-    </head>
+
+<head>
+    <meta charset="utf-8" />
+    <title>Fanttheysia Re-localization Dashboard</title>
+</head>
+
+<body>
+    <link data-trunk rel="rust" href="Cargo.toml" data-wasm-opt="z" data-bin="app" data-type="main" />
+    <link data-trunk rel="rust" href="Cargo.toml" data-wasm-opt="z" data-bin="worker" data-type="worker" />
+</body>
+
 </html>
