Add deploy scripts

--- a/crates/fanttheysia-webapp-frontend/index.html
+++ b/crates/fanttheysia-webapp-frontend/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <base data-trunk-public-url />
     <meta charset="utf-8" />
     <title>Fanttheysia Re-localization Dashboard</title>
 </head>
