Add syntax status indicator

--- a/crates/fanttheysia-webapp-frontend/index.html
+++ b/crates/fanttheysia-webapp-frontend/index.html
@@ -5,6 +5,7 @@
     <base data-trunk-public-url />
     <meta charset="utf-8" />
     <title>Fanttheysia Re-localization Dashboard</title>
+    <link data-trunk rel="css" href="style.css" />
 </head>
 
 <body>
